# Cpp-Projects

./: .gitignore
Basic-Terminal/: CMakeLists.txt  main.cpp
Basic-Terminal/include/: basic-terminal.h
Basic-Terminal/src/: basic-terminal.cpp
Memory-Manager/: CMakeLists.txt  main.cpp
Memory-Manager/include/: memory-block.h  memory-manager.h
Memory-Manager/src/: memory-manager.cpp
